Fixed some spacing issues

--- a/CFblog/CFblog/assets/css/custom.css
+++ b/CFblog/CFblog/assets/css/custom.css
@@ -1,1 +1,6 @@
 /* Add here all your css styles (customizations) */
+body {
+    margin-top: 15.5px;
+}
+
+#nav
