--- a/CFblog/CFblog/assets/plugins/bootstrap/css/bootstrap.css
+++ b/CFblog/CFblog/assets/plugins/bootstrap/css/bootstrap.css
@@ -4115,7 +4115,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .breadcrumb {
   padding: 8px 15px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   list-style: none;
   background-color: #f5f5f5;
   border-radius: 4px;
